# sra2samrefiner

./: .gitattributes  .gitignore  LICENSE  README.md  chtc_node.sh  main.nf  nextflow.config  pyproject.toml
.github/workflows/: README.md  branch-protection.yml  ci.yml  release.yml
assets/: test-accessions.txt
examples/: chtc_executable.sh
tests/: TEST_SUITE_DOCUMENTATION.md  conftest.py  test_cigar_logic.py  test_edge_cases.py  test_fix_verification.py  test_integration.py  test_single_end_logic.py  test_slicing_bug.py  test_trim_aligned_reads.py
tests/data/: README.md  trimmed_test.sam  trimmee_test.sam
