[project]
name = "sra2samrefiner"
description = ""
authors = [
  { name = "Nicholas Minor", email = "nrmino@wisc.edu" },
  { name = "William Gardner", email = "wkgardner@wisc.edu" },
]
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [
    "aiofiles>=24.1.0",
    "biopython>=1.85",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "pydantic>=2.11.7",
    "pysam>=0.23.0",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools >= 40.8.0", "cffi >=1.15.0,!=1.17.0"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools]
py-modules = ["bin"]

[project.scripts]
"sra2samrefiner" = "bin.__main__:main"

[tool.uv]
compile-bytecode = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "S101", "E501", "PTH123", "TD003"]
extend-ignore = []

[tool.basedpyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pixi.project]
channels = ["conda-forge", "bioconda", "anaconda"]
platforms = ["osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
sra2samrefiner = { path = ".", editable = true }

[tool.pixi.dependencies]
samtools = ">=1.5,<2"
minimap2 = ">=2.22,<3"
nextflow = ">=24.10.5,<25"
seqkit = ">=2.10.0,<3"
bbmap = ">=39.19,<40"
sra-tools = ">=3.2.0,<4"
samrefiner = ">=1.4.2,<2"
rust = ">=1.89.0,<1.90"
usher = ">=0.6.6,<0.7"

[tool.pixi.target.linux-64.dependencies]
apptainer = ">=1.3.6,<2"

[tool.pixi.target.linux-aarch64.dependencies]
apptainer = ">=1.3.6,<2"

[dependency-groups]
dev = [
  # "basedpyright>=1.28.4",
  "hypothesis>=6.138.7",
  "jupyter>=1.1.1",
  "marimo[sql]>=0.11.28",
  "polars>=1.26.0",
  "pyarrow>=19.0.1",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.1.0",
  "pytest-mock>=3.14.1",
  "ruff>=0.11.2",
  "tox>=4.24.2",
  "ty>=0.0.1a19",
]
